2007-04-30  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Add an expander property to the Column.
	Fixes #3336

2007-04-26  Johan Dahlin  <jdahlin@async.com.br>

	* examples/entrymask.py: Add a new example

	* kiwi/__init__.py: Add an explicit version check
	and give up if the version is too old.

2007-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* examples/search.py:
	* kiwi/db/query.py:
	* kiwi/db/sqlobj.py:
	* kiwi/ui/search.py:

	Add auto_search mode, which is enabled by default.
	Add optional columns, callback parameters to add_filter,
	to make it easier to integrate with the query executer.
	Add a generic query callback to the SQLObject executer.
	Use new api in example.

	* kiwi/ui/search.py:
	(DateSearchFilter._update_dates): When switching to a custom
	day, always set both to today.
	When switching to a custom interval, always use today and tomorrow.

2007-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/search.py (DateSearchFilter.select): Add and reorganize
	internals a bit to be able to select by option_type.

2007-04-25  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.grab_focus): 
	Add, fixes #3326

2007-04-20  Johan Dahlin  <jdahlin@async.com.br>

	* examples/search.py: Add an example.
	* kiwi/ui/search.py (DateSearchFilter): Make sure that you cannot
	select a start date after the end date and an end date before the 
	start date. Add some comments explaning what's going on since the
	code is not that trivial any longer.

2007-04-19  Johan Dahlin  <jdahlin@async.com.br>

	* README: Mention that SQLObject is an optional dependency

	* kiwi/db/__init__.py:
	* kiwi/db/query.py:
	* kiwi/db/sqlobj.py:
	* kiwi/enums.py:
	* kiwi/interfaces.py:
	* kiwi/ui/search.py:

	Add a SearchContainer plus database independent infrastructure to
	construct queries. Include a SQLObject plugin
